--- a/home-modern.html
+++ b/home-modern.html
@@ -391,8 +391,7 @@
                   </div>
                   <div class="feature__lower">
                     <a href="#" class="btn__link"><i class="icon-arrow-right icon-outlined"></i></a>
-                    <p class="feature__desc">All aspects of your software assets including purchasing, deployment &
-                      maintenance.</p>
+                    <p class="feature__desc">Making the world more greener and fresher with sustainable development.</p>
                   </div>
                 </div><!-- /.feature-item -->
                 <!-- Feature item #2 -->
@@ -406,9 +405,7 @@
                   </div>
                   <div class="feature__lower">
                     <a href="#" class="btn__link"><i class="icon-arrow-right icon-outlined"></i></a>
-                    <p class="feature__desc">Extend proven Tech best practices to HR, finance, and other service
-                      delivery
-                      areas.</p>
+                    <p class="feature__desc">Be a part of the nature while enjoying the luxury of a eco-friendly vacation.</p>
                   </div>
                 </div><!-- /.feature-item -->
                 <!-- Feature item #3 -->
@@ -422,7 +419,7 @@
                   </div>
                   <div class="feature__lower">
                     <a href="#" class="btn__link"><i class="icon-arrow-right icon-outlined"></i></a>
-                    <p class="feature__desc">Build dynamic request templates with associated workflows, and tasks.
+                    <p class="feature__desc">Promoting a natural and a organic economical community for the kisan of the world.
                     </p>
                   </div>
                 </div><!-- /.feature-item -->
@@ -437,9 +434,7 @@
                   </div>
                   <div class="feature__lower">
                     <a href="#" class="btn__link"><i class="icon-arrow-right icon-outlined"></i></a>
-                    <p class="feature__desc">Our technology allows you to offer the latest software to your
-                      possible
-                      customers!</p>
+                    <p class="feature__desc">Encouraging new revolutionary techniques for better development. - learn & teach.</p>
                   </div>
                 </div><!-- /.feature-item -->
                 <!-- Feature item #5 -->
@@ -477,13 +472,13 @@
             </div><!-- /.features-wrapper -->
           </div><!-- /.col-12 -->
         </div><!-- /.row -->
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-12 text-center">
             <p class="text__link color-white mb-0">Innovative and Sustainable Solutions,
               <a href="it-solutions.html" class="btn btn__link btn__white btn__underlined">Best Organizations</a>
             </p>
-          </div><!-- /.col-12 -->
-        </div>
+          </div>
+        </div> -->
       </div><!-- /.container -->
     </section><!-- /.Features Layout 2 -->
 
