--- a/home-modern.html
+++ b/home-modern.html
@@ -210,12 +210,12 @@
           <div class="container">
             <div class="row align-items-center">
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
-                <!-- <div class="slide__content">
+                <div class="slide__content">
                   <span class="slide__subtitle">All Kinds Of IT Services That Vow Your Success</span>
                   <h2 class="slide__title">Help Challenge Critical Activities</h2>
                   <p class="slide__desc">We are experienced professionals who understand that It services is
                     changing, and are true partners who care about your success.</p>
-                  <div class="d-flex align-items-center">
+                  <!-- <div class="d-flex align-items-center">
                     <a href="it-solutions.html" class="btn btn__primary mr-30">Our Services</a>
                     <a class="video__btn video__btn-rounded video__btn-white popup-video"
                       href="https://www.youtube.com/watch?v=nrJtHemSPW4">
@@ -224,8 +224,8 @@
                       </div>
                       <span class="video__btn-title color-white">Our Video!</span>
                     </a>
-                  </div>
-                </div> -->
+                  </div> -->
+                </div>
                 <!-- /.slide-content -->
               </div><!-- /.col-xl-7 -->
             </div><!-- /.row -->
@@ -236,12 +236,12 @@
           <div class="container">
             <div class="row align-items-center">
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
-                <!-- <div class="slide__content">
+                <div class="slide__content">
                   <span class="slide__subtitle">All Kinds Of IT Services That Vow Your Success</span>
                   <h2 class="slide__title">Simple, Intuitive & Expertly Crafted!</h2>
                   <p class="slide__desc">We are experienced professionals who understand that It services is
                     changing, and are true partners who care about your success.</p>
-                  <div class="d-flex align-items-center">
+                  <!-- <div class="d-flex align-items-center">
                     <a href="it-solutions.html" class="btn btn__primary mr-30">Our Services</a>
                     <a class="video__btn video__btn-rounded video__btn-white popup-video"
                       href="https://www.youtube.com/watch?v=nrJtHemSPW4">
@@ -250,8 +250,8 @@
                       </div>
                       <span class="video__btn-title color-white">Our Video!</span>
                     </a>
-                  </div>
-                </div> -->
+                  </div> -->
+                </div>
                 <!-- /.slide-content -->
               </div><!-- /.col-xl-7 -->
             </div><!-- /.row -->
@@ -262,12 +262,12 @@
           <div class="container">
             <div class="row align-items-center">
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
-                <!-- <div class="slide__content">
+                <div class="slide__content">
                   <span class="slide__subtitle">All Kinds Of IT Services That Vow Your Success</span>
                   <h2 class="slide__title">Simple, Intuitive & Expertly Crafted!</h2>
                   <p class="slide__desc">We are experienced professionals who understand that It services is
                     changing, and are true partners who care about your success.</p>
-                  <div class="d-flex align-items-center">
+                  <!-- <div class="d-flex align-items-center">
                     <a href="it-solutions.html" class="btn btn__primary mr-30">Our Services</a>
                     <a class="video__btn video__btn-rounded video__btn-white popup-video"
                       href="https://www.youtube.com/watch?v=nrJtHemSPW4">
@@ -276,8 +276,8 @@
                       </div>
                       <span class="video__btn-title color-white">Our Video!</span>
                     </a>
-                  </div>
-                </div> -->
+                  </div> -->
+                </div>
                 <!-- /.slide-content -->
               </div><!-- /.col-xl-7 -->
             </div><!-- /.row -->
@@ -288,12 +288,12 @@
           <div class="container">
             <div class="row align-items-center">
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
-                <!-- <div class="slide__content">
+                <div class="slide__content">
                   <span class="slide__subtitle">All Kinds Of IT Services That Vow Your Success</span>
                   <h2 class="slide__title">Simple, Intuitive & Expertly Crafted!</h2>
                   <p class="slide__desc">We are experienced professionals who understand that It services is
                     changing, and are true partners who care about your success.</p>
-                  <div class="d-flex align-items-center">
+                  <!-- <div class="d-flex align-items-center">
                     <a href="it-solutions.html" class="btn btn__primary mr-30">Our Services</a>
                     <a class="video__btn video__btn-rounded video__btn-white popup-video"
                       href="https://www.youtube.com/watch?v=nrJtHemSPW4">
@@ -302,8 +302,8 @@
                       </div>
                       <span class="video__btn-title color-white">Our Video!</span>
                     </a>
-                  </div>
-                </div> -->
+                  </div> -->
+                </div>
                 <!-- /.slide-content -->
               </div><!-- /.col-xl-7 -->
             </div><!-- /.row -->
