--- a/home-modern.html
+++ b/home-modern.html
@@ -64,13 +64,13 @@
                 </ul> -->
               </li>
 
-              <li class="nav__item  has-dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle nav__item-link">Services</a>
+              <!-- <li class="nav__item">
+                <a href="#" data-toggle="dropdown" class="nav__item-link">Services</a>
                 <ul class="dropdown-menu wide-dropdown-menu">
                   <li class="nav__item">
                     <div class="row mx-0">
                       <div class="col-sm-12 dropdown-menu-col">
-                        <!-- <a href="it-solutions.html" class="nav__item-link dropdown-menu-title">IT Solutions</a> -->
+                        <a href="it-solutions.html" class="nav__item-link dropdown-menu-title">IT Solutions</a>
                         <ul class="nav flex-column">
                           <li class="nav__item"><a class="nav__item-link" href="it-solutions-single.html">Bamboo Plantation</a>
                           </li> 
@@ -82,8 +82,8 @@
                           </li> 
                           
                         </ul>
-                      </div><!-- /.col-sm-6 -->
-                      <!-- <div class="col-sm-6 dropdown-menu-col">
+                      </div>
+                      <div class="col-sm-6 dropdown-menu-col">
                         <a href="industries.html" class="nav__item-link dropdown-menu-title">Industries</a>
                         <ul class="nav flex-column">
                           <li class="nav__item"><a class="nav__item-link"
@@ -106,14 +106,13 @@
                           </li>
 
                         </ul>
-                      </div> -->
-                      <!-- /.col-sm-6 -->
-                    </div><!-- /.row -->
+                      </div>
+                    </div>
                   </li>
                 </ul>
-              </li>
+              </li> -->
               <li class="nav__item">
-                <a href="about-us.html" class="nav__item-link">About Us</a>
+                <a href="about-us.html" class="nav__item-link">Who we are ! </a>
                 <!-- <ul class="dropdown-menu">
                   <li class="nav__item">
                     <a href="about-us.html" class="nav__item-link">About Us</a>
@@ -179,22 +178,23 @@
                 </ul>
               </li> -->
               <li class="nav__item">
-                <a href="contact-us.html" class="nav__item-link">Contact Us</a>
+                <a href="contact-us.html" class="nav__item-link">Connect with Us</a>
               </li>
-              <li class="nav__item">
+              <!-- <li class="nav__item">
                 <a href="leadership-team.html" class="nav__item-link">Our Team</a>
               </li>
               <li class="nav__item">
                 <a href="leadership-team.html" class="nav__item-link">Franchise</a>
-              </li>
+              </li> -->
             </ul><!-- /.navbar-nav -->
           </div><!-- /.navbar-collapse -->
           <ul class="navbar-actions list-unstyled mb-0 d-flex align-items-center">
-            <li><button class="action__btn action__btn-search"><i class="icon-search"></i></button></li>
+            <!-- <li><button class="action__btn action__btn-search"><i class="icon-search"></i></button></li> -->
             <li class="d-none d-xl-block">
-              <a href="request-quote.html" class="btn action__btn-contact">Request A Quote</a>
+              <a href="request-quote.html" class="btn action__btn-contact">Connect With Nature</a>
             </li>
-          </ul><!-- /.navbar-actions -->
+          </ul>
+          <!-- /.navbar-actions -->
         </div><!-- /.container -->
       </nav><!-- /.navabr -->
     </header><!-- /.Header -->
@@ -369,131 +369,21 @@
         </div><!-- /.row -->
       </div><!-- /.container -->
     </section><!-- /.Banner layout 3 -->
-    <!-- ======================
-    Features Layout 2
-    ========================= -->
-    <section class="features-layout2 pt-0 pb-80 bg-overlay bg-overlay-primary">
-      <div class="bg-img"><img src="assets/images/banners/12.jpg" alt="background"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div class="features-wrapper">
-              <div class="slick-carousel"
-                data-slick='{"slidesToShow": 4, "slidesToScroll": 2, "arrows": false, "false": true, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 2}}, {"breakpoint": 767, "settings": {"slidesToShow": 2}}, {"breakpoint": 480, "settings": {"slidesToShow": 1}}]}'>
-                <!-- Feature item #1 -->
-                <div class="feature-item">
-                  <div class="feature__upper">
-                    <div class="feature__icon">
-                      <!-- <i class="icon-software"></i> -->
-                      <img src="assets/images/icons/bp.png" alt="">
-                    </div>
-                    <h4 class="feature__title">Bamboo Plantation</h4>
-                  </div>
-                  <div class="feature__lower">
-                    <a href="#" class="btn__link"><i class="icon-arrow-right icon-outlined"></i></a>
-                    <p class="feature__desc">Making the world more greener and fresher with sustainable development.</p>
-                  </div>
-                </div><!-- /.feature-item -->
-                <!-- Feature item #2 -->
-                <div class="feature-item">
-                  <div class="feature__upper">
-                    <div class="feature__icon">
-                      <!-- <i class="icon-dos"></i> -->
-                      <img src="assets/images/icons/abc.png" alt="">
-                    </div>
-                    <h4 class="feature__title">ABC Retreat</h4>
-                  </div>
-                  <div class="feature__lower">
-                    <a href="#" class="btn__link"><i class="icon-arrow-right icon-outlined"></i></a>
-                    <p class="feature__desc">Be a part of the nature while enjoying the luxury of a eco-friendly vacation.</p>
-                  </div>
-                </div><!-- /.feature-item -->
-                <!-- Feature item #3 -->
-                <div class="feature-item">
-                  <div class="feature__upper">
-                    <div class="feature__icon">
-                      <!-- <i class="icon-operating-system"></i> -->
-                      <img src="assets/images/icons/ip.png" alt="">
-                    </div>
-                    <h4 class="feature__title">Industrial Park</h4>
-                  </div>
-                  <div class="feature__lower">
-                    <a href="#" class="btn__link"><i class="icon-arrow-right icon-outlined"></i></a>
-                    <p class="feature__desc">Promoting a natural and a organic economical community for the kisan of the world.
-                    </p>
-                  </div>
-                </div><!-- /.feature-item -->
-                <!-- Feature item #4 -->
-                <div class="feature-item">
-                  <div class="feature__upper">
-                    <div class="feature__icon">
-                      <!-- <i class="icon-machine-learning"></i> -->
-                      <img src="assets/images/icons/kp.png" alt="">
-                    </div>
-                    <h4 class="feature__title">Kissan Pathshala</h4>
-                  </div>
-                  <div class="feature__lower">
-                    <a href="#" class="btn__link"><i class="icon-arrow-right icon-outlined"></i></a>
-                    <p class="feature__desc">Encouraging new revolutionary techniques for better development. - learn & teach.</p>
-                  </div>
-                </div><!-- /.feature-item -->
-                <!-- Feature item #5 -->
-                <!-- <div class="feature-item">
-                  <div class="feature__upper">
-                    <div class="feature__icon">
-                      <i class="icon-dos"></i>
-                    </div>
-                    <h4 class="feature__title">Privileged Access Management</h4>
-                  </div>
-                  <div class="feature__lower">
-                    <a href="#" class="btn__link"><i class="icon-arrow-right icon-outlined"></i></a>
-                    <p class="feature__desc">Extend proven Tech best practices to HR, finance, and other service
-                      delivery
-                      areas.</p>
-                  </div>
-                </div> -->
-                <!-- /.feature-item -->
-                <!-- Feature item #6 -->
-                <!-- <div class="feature-item">
-                  <div class="feature__upper">
-                    <div class="feature__icon">
-                      <i class="icon-operating-system"></i>
-                    </div>
-                    <h4 class="feature__title">Software License Management</h4>
-                  </div>
-                  <div class="feature__lower">
-                    <a href="#" class="btn__link"><i class="icon-arrow-right icon-outlined"></i></a>
-                    <p class="feature__desc">Build dynamic request templates with associated workflows, and tasks.
-                    </p>
-                  </div>
-                </div> -->
-                <!-- /.feature-item -->
-              </div><!-- /.carousel-->
-            </div><!-- /.features-wrapper -->
-          </div><!-- /.col-12 -->
-        </div><!-- /.row -->
-        <!-- <div class="row">
-          <div class="col-12 text-center">
-            <p class="text__link color-white mb-0">Innovative and Sustainable Solutions,
-              <a href="it-solutions.html" class="btn btn__link btn__white btn__underlined">Best Organizations</a>
-            </p>
-          </div>
-        </div> -->
-      </div><!-- /.container -->
-    </section><!-- /.Features Layout 2 -->
+
 
     <!-- ========================
         Services Carousel
     =========================== -->
-    <section class="services-layout2 services-carousel services-carousel-2 pt-130 pb-60">
+    <section class="services-layout2 services-carousel services-carousel-2 pt-130 pb-60" style="background-color: #47a145;">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
+          <!-- <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
             <div class="heading text-center mb-40">
               <h2 class="heading__subtitle">Nationwide Service, Local Expertise</h2>
               <h3 class="heading__title">Offering the latest software and IT services to our customers!</h3>
             </div>
-          </div><!-- /col-lg-6 -->
+          </div> -->
+          <!-- /col-lg-6 -->
         </div><!-- /.row -->
         <div class="row">
           <div class="col-12">
