--- a/home-modern.html
+++ b/home-modern.html
@@ -548,14 +548,14 @@
             </div><!-- /.carousel -->
           </div><!-- /.col-12 -->
         </div><!-- /.row -->
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-12 btn-wrapper">
             <p class="text__link">Innovative and Sustainable Solutions,
               <a href="it-solutions.html" class="btn btn__link btn__primary btn__underlined">Best Organizations</a>
             </p>
-          </div><!-- /.col-12 -->
-        </div><!-- /.row -->
-      </div><!-- /.container -->
+          </div>
+        </div> -->
+      </div>
     </section><!-- /.Services Layout 2 -->
 
     <!-- =====================
