--- a/home-modern.html
+++ b/home-modern.html
@@ -522,10 +522,9 @@
                   <div class="post__meta-cat">
                     <a href="#">Consulting</a><a href="#">Sales</a>
                   </div><!-- /.blog-meta-cat -->
-                  <span class="post__meta-date">May 13, 2020</span>
+                  <!-- <span class="post__meta-date">May 13, 2020</span> -->
                 </div>
-                <h4 class="post__title"><a href="#">Five Ways to Develop a World Class Sales Operations
-                    Function</a>
+                <h4 class="post__title"><a href="#">Oxygen Purodhyan</a>
                 </h4>
                 <p class="post__desc">Outsourcing IT infrastructure is a concept that has been around for a while.
                   Characterized in terms of technicians and engineers, workstations and servers, the idea of outsourcing
@@ -551,9 +550,9 @@
                   <div class="post__meta-cat">
                     <a href="#">Tech</a><a href="#">Communications</a>
                   </div><!-- /.blog-meta-cat -->
-                  <span class="post__meta-date">April 17, 2020</span>
+                  <!-- <span class="post__meta-date">April 17, 2020</span> -->
                 </div>
-                <h4 class="post__title"><a href="#">Succession Risks That Threaten Your Leadership Strategy</a>
+                <h4 class="post__title"><a href="#">ABC Retreat <span style="font-size: 18px;">(Advekam Bodhi Chetanam)</span>   </a>
                 </h4>
                 <p class="post__desc">Today’s organizations need a quality bench of leaders to drive business
                   outcomes and satisfy employees, customers and investors who now demand more transparency and
@@ -579,10 +578,9 @@
                   <div class="post__meta-cat">
                     <a href="#">Digital Business</a><a href="#">Cloud</a>
                   </div><!-- /.blog-meta-cat -->
-                  <span class="post__meta-date">March 20, 2020</span>
+                  <!-- <span class="post__meta-date">March 20, 2020</span> -->
                 </div>
-                <h4 class="post__title"><a href="#">What Do Employee Engagement Surveys Tell You About
-                    Employee?</a>
+                <h4 class="post__title"><a href="#">Industrial Park</a>
                 </h4>
                 <p class="post__desc">Outsourcing IT infrastructure is a concept that has been around for a while.
                   Characterized in terms of technicians and engineers, workstations and servers, the idea of outsourcing
