--- a/home-modern.html
+++ b/home-modern.html
@@ -448,53 +448,6 @@
       </div>
     </section><!-- /.Services Layout 2 -->
 
-    <!-- =====================
-           Clients
-     ======================== -->
-    <section class="clients pt-50 pb-50 border-top">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-12">
-            <div class="slick-carousel"
-              data-slick='{"slidesToShow": 6, "arrows": false, "dots": false, "autoplay": true,"autoplaySpeed": 2000, "infinite": true, "responsive": [ {"breakpoint": 992, "settings": {"slidesToShow": 4}}, {"breakpoint": 767, "settings": {"slidesToShow": 3}}, {"breakpoint": 480, "settings": {"slidesToShow": 2}}]}'>
-              <div class="client">
-                <img src="assets/images/clients/1.png" alt="client">
-                <img src="assets/images/clients/1.png" alt="client">
-              </div><!-- /.client -->
-              <div class="client">
-                <img src="assets/images/clients/2.png" alt="client">
-                <img src="assets/images/clients/2.png" alt="client">
-              </div><!-- /.client -->
-              <div class="client">
-                <img src="assets/images/clients/3.png" alt="client">
-                <img src="assets/images/clients/3.png" alt="client">
-              </div><!-- /.client -->
-              <div class="client">
-                <img src="assets/images/clients/4.png" alt="client">
-                <img src="assets/images/clients/4.png" alt="client">
-              </div><!-- /.client -->
-              <div class="client">
-                <img src="assets/images/clients/5.png" alt="client">
-                <img src="assets/images/clients/5.png" alt="client">
-              </div><!-- /.client -->
-              <div class="client">
-                <img src="assets/images/clients/6.png" alt="client">
-                <img src="assets/images/clients/6.png" alt="client">
-              </div><!-- /.client -->
-              <div class="client">
-                <img src="assets/images/clients/7.png" alt="client">
-                <img src="assets/images/clients/7.png" alt="client">
-              </div><!-- /.client -->
-            </div><!-- /.carousel -->
-          </div><!-- /.col-12 -->
-        </div><!-- /.row -->
-      </div><!-- /.container -->
-    </section><!-- /.clients -->
-    
-
-
-  
-
     <!-- ======================
       Blog Grid
     ========================= -->
@@ -526,9 +479,7 @@
                 </div>
                 <h4 class="post__title"><a href="#">Oxygen Purodhyan</a>
                 </h4>
-                <p class="post__desc">Outsourcing IT infrastructure is a concept that has been around for a while.
-                  Characterized in terms of technicians and engineers, workstations and servers, the idea of outsourcing
-                  your basic IT needs...
+                <p class="post__desc">Making the world more greener and fresher with sustainable development.
                 </p>
                 <a href="blog-single-post.html" class="btn btn__secondary btn__link">
                   <span>Read More</span>
@@ -554,9 +505,7 @@
                 </div>
                 <h4 class="post__title"><a href="#">ABC Retreat <span style="font-size: 18px;">(Advekam Bodhi Chetanam)</span>   </a>
                 </h4>
-                <p class="post__desc">Today’s organizations need a quality bench of leaders to drive business
-                  outcomes and satisfy employees, customers and investors who now demand more transparency and
-                  accountability...
+                <p class="post__desc">Be a part of the nature while enjoying the luxury of a eco-friendly vacation.
                 </p>
                 <a href="blog-single-post.html" class="btn btn__secondary btn__link">
                   <span>Read More</span>
@@ -582,9 +531,7 @@
                 </div>
                 <h4 class="post__title"><a href="#">Industrial Park</a>
                 </h4>
-                <p class="post__desc">Outsourcing IT infrastructure is a concept that has been around for a while.
-                  Characterized in terms of technicians and engineers, workstations and servers, the idea of outsourcing
-                  your basic IT needs...
+                <p class="post__desc">Promoting a natural and a organic economical community for the kisan of the world
                 </p>
                 <a href="blog-single-post.html" class="btn btn__secondary btn__link">
                   <span>Read More</span>
