--- a/home-modern.html
+++ b/home-modern.html
@@ -566,7 +566,7 @@
             <div class="heading mb-30">
               <div class="d-flex align-items-center mb-20">
                 <div class="divider divider-primary mr-30"></div>
-                <h2 class="heading__subtitle mb-0">Timely Service Delivery & Incident Resolutions!! </h2>
+                <h2 class="heading__subtitle mb-0">Oxygen is the freedom of the soul. </h2>
               </div>
               <h3 class="heading__title mb-40">Oxygen Purodhyan
               </h3>
@@ -589,7 +589,7 @@
           </div><!-- /.col-lg-6 -->
           <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
             <div class="about__img mb-40">
-              <img src="assets/images/about/1.jpg" alt="about">
+              <img src="assets/images/about/o2.png" alt="about">
               <blockquote class="blockquote d-flex align-items-end mb-0">
                 <div class="blockquote__avatar">
                   <img src="assets/images/testimonials/thumbs/1.png" alt="thumb">
