--- a/home-modern.html
+++ b/home-modern.html
@@ -582,7 +582,7 @@
                 <li>Economic Targets</li>
                 <li>Environmental Targets</li>
               </ul>
-              <img src="assets/images/about/singnture.png" alt="singnture">
+              <!-- <img src="assets/images/about/singnture.png" alt="singnture"> -->
               <a href="it-solutions-single.html" class="btn btn__secondary">
                 <span>Read More</span>
                 <i class="icon-arrow-right"></i>
