--- a/home-modern.html
+++ b/home-modern.html
@@ -113,7 +113,7 @@
                 </ul>
               </li> -->
               <li class="nav__item">
-                <a href="it-solutions-single.html" class="nav__item-link">What We Do ? </a>
+                <a href="it-solutions-single.html" class="nav__item-link">Our Activities</a>
               </li>
               <li class="nav__item">
                 <a href="about-us.html" class="nav__item-link">Who we are ! </a>
@@ -182,7 +182,7 @@
                 </ul>
               </li> -->
               <li class="nav__item">
-                <a href="contact-us.html" class="nav__item-link">Connect with Us</a>
+                <a href="contact-us.html" class="nav__item-link">Innovators</a>
               </li>
               <!-- <li class="nav__item">
                 <a href="leadership-team.html" class="nav__item-link">Our Team</a>
@@ -591,9 +591,9 @@
             <div class="about__img mb-40">
               <img src="assets/images/about/o2.png" alt="about">
               <blockquote class="blockquote d-flex align-items-end mb-0">
-                <div class="blockquote__avatar">
+                <!-- <div class="blockquote__avatar">
                   <img src="assets/images/testimonials/thumbs/1.png" alt="thumb">
-                </div>
+                </div> -->
                 <div class="blockquote__content">
                   <h4 class="blockquote__title mb-0">As one of the world's largest ITService Providers with over 120
                     engineers and IT support staff are ready to help.
