--- a/home-modern.html
+++ b/home-modern.html
@@ -598,8 +598,8 @@
                   <img src="assets/images/testimonials/thumbs/1.png" alt="thumb">
                 </div>
                 <div class="blockquote__content">
-                  <h4 class="blockquote__title mb-0">As one of the world's largest ITService Providers with over 120
-                    engineers and IT support staff are ready to help.
+                  <h4 class="blockquote__title mb-0">A unique World on This Earth Which Opens all Yours Senses 
+                    to Feel the Nature's Beauty and rejuvenate your Energy!!!
                   </h4>
                 </div><!-- /.blockquote__content -->
               </blockquote><!-- /.blockquote -->
