--- a/home-modern.html
+++ b/home-modern.html
@@ -263,7 +263,7 @@
         Services Carousel
     =========================== -->
     <section class="services-layout2 services-carousel services-carousel-2 pt-130 pb-60"
-      style="background-image:url(assets/images/backgrounds/op2.png); background-size: contain;">
+      style="background-image:url(assets/images/backgrounds/op2.png); background-size: contain; background-repeat: no-repeat;">
       
     </section><!-- /.Services Layout 2 -->
     <!-- ======================
@@ -578,7 +578,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
             <div class="heading text-center mb-40">
-              <h3 class="heading__title" style=" color: #375d00;">वसुधैव कुटुम्बकम</h3>
+              <h3 class="heading__title" style=" color: #375d00;">घर से अंतरराष्ट्रीय स्तर तक ||</h3>
             </div><!-- /.heading -->
           </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
