--- a/about-us.html
+++ b/about-us.html
@@ -124,7 +124,7 @@
     <!-- ========================
       Secondary Nav
     =========================== -->
-    <section class="secondary-nav sticky-top py-0">
+    <!-- <section class="secondary-nav sticky-top py-0">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -137,8 +137,21 @@
           </div>
         </div>
       </div>
-    </section>
-
+    </section> -->
+    <section class="secondary-nav secondary-nav-internal-navigation sticky-top py-0">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <nav class="nav nav-tabs justify-content-center">
+              <a href="#" data-scroll="about" class="nav__link">About Us</a>
+              <a href="#" data-scroll="qualified" class="nav__link">Why Choose Us </a>
+              <a href="#" data-scroll="rec" class="nav__link">Recognitions</a>
+              <a href="#" data-scroll="team" class="nav__link">Our Team</a>
+            </nav>
+          </div><!-- /.col-12 -->
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+    </section><!-- /.Secondary Nav -->
     <!-- ========================
       About Layout 1
     =========================== -->
