--- a/oxygen.html
+++ b/oxygen.html
@@ -131,6 +131,7 @@
         <div class="row">
           <div class="col-12">
             <nav class="nav nav-tabs justify-content-center">
+              <a href="#" data-scroll="overview" class="nav__link">Overview</a>
               <a href="#" data-scroll="about" class="nav__link">Overview</a>
               <a href="#" data-scroll="banner3" class="nav__link">How It Works </a>
               <a href="#" data-scroll="case-studies" class="nav__link">Case Studies</a>
@@ -142,7 +143,45 @@
         </div><!-- /.row -->
       </div><!-- /.container -->
     </section><!-- /.Secondary Nav -->
-
+    <section id="overview" class="about-layout4 pt-130 pb-0">
+      <div class="container">
+        <div class="row heading">
+          <div class="col-12">
+            <div class="d-flex align-items-center mb-20">
+              <div class="divider divider-primary mr-30"></div>
+              <h2 class="heading__subtitle mb-0">Oxygen is the Freedom of the soul.</h2>
+            </div>
+          </div><!-- /.col-12 -->
+          <div class="col-sm-12 col-md-12 col-lg-6">
+            <h3 class="heading__title mb-40">Oxygen Purodhyan
+            </h3>
+          </div><!-- /.col-lg-6 -->
+          <div class="col-sm-12 col-md-12 col-lg-6">
+            <p>SmartData has been helping organizations throughout the World to manage their IT with our unique approach
+              to technology management and consultancy solutions. Provide users with appropriate view and access
+              permissions to requests, problems, changes, contracts, assets, solutions, and reports with our experienced
+              professionals.</p>
+          </div><!-- /.col-lg-6 -->
+        </div><!-- /.row -->
+        <div class="row">
+          <div class="col-sm-12 col-md-12 col-lg-6">
+            <div class="about__img">
+              <img src="assets/images/about/opp.png" alt="about">
+            </div><!-- /.about-img -->
+          </div><!-- /.col-lg-6 -->
+          <div class="col-sm-12 col-md-12 col-lg-6 d-flex flex-column justify-content-between">
+            <ul class="list-items list-items-layout2 list-horizontal list-unstyled d-flex flex-wrap mt-40">
+              <li>Eliminate Repeat Entry</li>
+              <li>Simpliy Communication</li>
+              <li>Drive Business Process</li>
+              <li>Speed Up Transactions</li>
+              <li>Structure Data & Docs</li>
+              <li>Automate Workflows</li>
+            </ul>
+          </div><!-- /.col-lg-6 -->
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+    </section>
     <!-- ========================
       About Layout 3
     =========================== -->
@@ -153,11 +192,59 @@
             <div class="heading mb-40">
               <div class="d-flex align-items-center mb-20">
                 <div class="divider divider-primary mr-30"></div>
-                <h2 class="heading__subtitle mb-0">Timely Service Delivery &amp; Incident Resolutions!! </h2>
+                <h2 class="heading__subtitle mb-0">Bamboo Plantation </h2>
               </div>
-              <h3 class="heading__title mb-40">Manages service delivery across various business like, HR, Legal and
-                other IT departments!!
+              <h3 class="heading__title mb-40">Why Bamboo ?
               </h3>
+            </div>
+          </div><!-- /.col-xl-5 -->
+        </div><!-- /.row -->
+        <div class="row about__Text">
+          <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6">
+            <div class="offset-xl-2 position-relative">
+              <i class="icon-quote"></i>
+
+              <h2 class="heading__subtitle mb-0">Economic Substainbility: </h2>
+              <br>
+              <p>SmartData has been helping organizations throughout the World to manage their IT with our unique
+                approach
+                to technology management and consultancy solutions. Provide users with appropriate view and access
+                permissions to requests, problems, changes, contracts, assets, solutions, and reports </p>
+              <ul class="list-items list-items-layout2 list-horizontal list-unstyled d-flex flex-wrap mt-40">
+                <li>One Time Plantation</li>
+                <li>Fast Growing &amp; High Yielding</li>
+                <li>Hardy &amp; Sustainable</li>
+                <li>Easy to Harvest</li>
+                <li>Approx 60 Years of Life Span</li>
+                <li>Self Regenerates</li>
+                <li>Cheap Substitute of Fire-Wood</li>
+                <li>Easy to Sell</li>
+                <li>Plenty of vairety</li>
+              </ul>
+
+              <!-- <img src="assets/images/about/singnture.png" alt="singnture" class="mt-20"> -->
+            </div>
+            <!-- <div class="about__img mt-80 mb-30">
+              <img src="assets/images/about/7.jpg" alt="about">
+            </div> -->
+
+          </div><!-- /.col-xl-6 -->
+          <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5 offset-xl-1">
+
+            <div class="about__img mt-90">
+              <img src="assets/images/about/growth.png" alt="about">
+            </div>
+          </div><!-- /.col-xl-5 -->
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+    </section><!-- /.About Layout 3 -->
+    <section id="about" class="about-layout2 animated-Progressbars">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6">
+            <div class="heading mb-40">
+
+              <h3 class="heading__title mb-40">Environment Substainbility:</h3>
             </div>
           </div><!-- /.col-xl-5 -->
         </div><!-- /.row -->
@@ -169,66 +256,34 @@
                 approach
                 to technology management and consultancy solutions. Provide users with appropriate view and access
                 permissions to requests, problems, changes, contracts, assets, solutions, and reports </p>
-              <p>You need information security services to proactively prevent and protect confidential data, as well as
-                detect internal and external threats. Protect your business by choosing managed security service
-                provider.
-                Our security services can help ensure your business Trusted by the world's best organizations.</p>
-              <p>for 15 years and running, it has been delivering smiles to hundreds of IT advisors, developers, users,
-                and business owners. Easy solutions for all difficult IT problems to ensure high availability.</p>
-              <p>Provide users with appropriate view and access permissions to requests, problems, changes, contracts,
-                assets, solutions, and reports with our experienced professionals. </p>
-              <img src="assets/images/about/singnture.png" alt="singnture" class="mt-20">
+              <ul class="list-items list-items-layout2 list-horizontal list-unstyled d-flex flex-wrap mt-40">
+                <li>35% More O2 (Oxygen)</li>
+                <li>Less Carbon Footprint</li>
+                <li>Natural Rain Water Harvesting</li>
+                <li>Mruda Nirman</li>
+                <li>Restoration of Degraded Land</li>
+                <li>Balancing Bacterial Diversity</li>
+                <li>Jeev Sanrakhshan</li>
+                <li>Bird Conservation</li>
+                <li>Green &amp; Clean Solution</li>
+              </ul>
+
+              <!-- <img src="assets/images/about/singnture.png" alt="singnture" class="mt-20"> -->
             </div>
-            <div class="about__img mt-80 mb-30">
+            <!-- <div class="about__img mt-80 mb-30">
               <img src="assets/images/about/7.jpg" alt="about">
-            </div><!-- /.about__img-->
-            <div class="video__btn-wrapper">
-              <a class="video__btn video__btn-white popup-video" href="https://www.youtube.com/watch?v=nrJtHemSPW4">
-                <div class="video__player">
-                  <i class="fa fa-play"></i>
-                </div>
-                <span class="video__btn-title">Watch Our Presentation!</span>
-              </a>
-            </div><!-- /.video__btn-wrapper-->
+            </div> -->
+
           </div><!-- /.col-xl-6 -->
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5 offset-xl-1">
-            <p class="mb-40">As one of the world's largest ITService Providers, our deep pool of certified engineers and
-              IT staff are ready to help you to keep your IT business safe & ensure high availability.</p>
-            <!-- progress 1 -->
-            <div class="progress-item">
-              <h5 class="progress__title">Cyber Security</h5>
-              <div class="progress">
-                <div class="progress-bar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" role="progressbar">
-                  <span class="progress__percentage"></span>
-                </div>
-              </div><!-- /.progress -->
-            </div><!-- /.progress-item  -->
-            <!-- progress 2 -->
-            <div class="progress-item">
-              <h5 class="progress__title">Cloud Computing</h5>
-              <div class="progress">
-                <div class="progress-bar" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100" role="progressbar">
-                  <span class="progress__percentage"></span>
-                </div>
-              </div><!-- /.progress -->
-            </div><!-- /.progress-item  -->
-            <!-- progress 3 -->
-            <div class="progress-item">
-              <h5 class="progress__title">Cloud Computing</h5>
-              <div class="progress">
-                <div class="progress-bar" aria-valuenow="81" aria-valuemin="0" aria-valuemax="100" role="progressbar">
-                  <span class="progress__percentage"></span>
-                </div>
-              </div><!-- /.progress -->
-            </div><!-- /.progress-item  -->
+
             <div class="about__img mt-90">
               <img src="assets/images/about/3.jpg" alt="about">
             </div>
           </div><!-- /.col-xl-5 -->
         </div><!-- /.row -->
       </div><!-- /.container -->
-    </section><!-- /.About Layout 3 -->
-
+    </section>
     <!-- =====================
            Clients
     ======================== -->
