--- a/about-us.html
+++ b/about-us.html
@@ -511,35 +511,33 @@
           <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-3 footer-widget footer-widget-about">
               <div class="footer-widget__content">
-                <img src="assets/images/logo/logo-light.png" alt="logo" class="mb-30">
+                <img src="assets/images/logo/logo-dark1.png" alt="logo" class="mb-30">
+                <p style="color: white;"> <span style="font-size: 20px; color:white; font-weight: 600;">UNITY
+                    MAKES</span> <br> Strength of success</p>
               </div><!-- /.footer-widget__content -->
             </div><!-- /.col-xl-3 -->
             <div class="col-sm-6 col-md-4 col-lg-2 footer-widget footer-widget-nav">
-              <h6 class="footer-widget__title">Company</h6>
+              <h6 class="footer-widget__title">Services</h6>
               <div class="footer-widget__content">
                 <nav>
                   <ul class="list-unstyled">
-                    <li><a href="about-us.html">About Us</a></li>
-                    <li><a href="leadership-team.html">Meet Our Team</a></li>
-                    <li><a href="blog.html">News & Media</a></li>
-                    <li><a href="projects-grid.html">Case Studies</a></li>
-                    <li><a href="contact-us.html">Contacts</a></li>
-                    <li><a href="#">Investors</a></li>
+                    <li><a href="about-us.html">Bamboo Plantation</a></li>
+                    <li><a href="leadership-team.html">ABC Retreat</a></li>
+                    <li><a href="blog.html">Industrial Park</a></li>
+                    <li><a href="projects-grid.html">Kissan Pathshala</a></li>
                   </ul>
                 </nav>
               </div><!-- /.footer-widget__content -->
             </div><!-- /.col-lg-2 -->
             <div class="col-sm-6 col-md-4 col-lg-2 footer-widget footer-widget-nav">
-              <h6 class="footer-widget__title">Solutions</h6>
+              <h6 class="footer-widget__title">Useful Links</h6>
               <div class="footer-widget__content">
                 <nav>
                   <ul class="list-unstyled">
-                    <li><a href="#">IT Management</a></li>
-                    <li><a href="#">Cyber Security</a></li>
-                    <li><a href="#">Cloud Computing</a></li>
-                    <li><a href="#">IT Consulting</a></li>
-                    <li><a href="#">Software Dev</a></li>
-                    <li><a href="#">IT Support</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Our Team</a></li>
                   </ul>
                 </nav>
               </div><!-- /.footer-widget__content -->
@@ -581,7 +579,8 @@
           <div class="row align-items-center">
             <div class="col-sm-12 col-md-5 col-lg-5">
               <div class="footer__copyrights">
-                <span class="fz-14">&copy; 2020 Smart Data, All Rights Reserved. With Love by</span>
+                <span class="fz-14">&copy; 2022 Oxygen Park, All Rights Reserved. Develop by <a
+                    href="https://keryar.com/" style="color: black; font-weight:600;">KERYAR</a> </span>
                 <a class="fz-14 color-primary" href="http://themeforest.net/user/7oroof">7oroof.com</a>
               </div>
             </div><!-- /.col-lg-6 -->
@@ -594,7 +593,7 @@
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
               </ul><!-- /.social-icons -->
-              <div>
+              <!-- <div>
                 <a href="#" class="btn btn__white btn__download mr-20">
                   <i class="fab fa-apple"></i>
                   <span>App Store</span>
@@ -603,7 +602,7 @@
                   <i class="fab fa-google-play"></i>
                   <span>Google Play</span>
                 </a>
-              </div>
+              </div> -->
             </div><!-- /.col-lg-6 -->
           </div><!-- /.row -->
         </div><!-- /.container -->
